Inconsistent result on animated DoF file #55642

Closed
opened 2018-06-27 12:03:15 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: a5ba97e58c (blender2.8 HEAD)
Worked: 2.79a

Short description of error
Render result changes every time I render.

Exact steps for others to reproduce the error

for i in `seq 100`; do ./bin/blender -b ~/bugs/dof-render.blend -o ~/Desktop/dof/${i}_ -f 101; done

File to reproduce:
dof-render.blend

Example of different frames:
0101.jpg
0101.jpg

Comparison between files:
diff.jpg

**Blender Version** Broken: a5ba97e58c1f (blender2.8 HEAD) Worked: 2.79a **Short description of error** Render result changes every time I render. **Exact steps for others to reproduce the error** ``` for i in `seq 100`; do ./bin/blender -b ~/bugs/dof-render.blend -o ~/Desktop/dof/${i}_ -f 101; done ``` File to reproduce: [dof-render.blend](https://archive.blender.org/developer/F3815892/dof-render.blend) Example of different frames: ![0101.jpg](https://archive.blender.org/developer/F3815868/0101.jpg) ![0101.jpg](https://archive.blender.org/developer/F3815870/0101.jpg) Comparison between files: ![diff.jpg](https://archive.blender.org/developer/F3815880/diff.jpg)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin self-assigned this 2018-06-27 12:04:47 +02:00
Author
Owner

For the records:

  • It doesn't happen with 2.79a with or without --enable-new-despgraph.
  • It is reproducible very reliably in 2.8.
For the records: * It doesn't happen with 2.79a with or without --enable-new-despgraph. * It is reproducible very reliably in 2.8.

This issue was referenced by 08b105654d

This issue was referenced by 08b105654d1f3df1173696f0a212586d99ff5169

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55642
No description provided.